--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.14.3",
+    "@react-three/fiber": "^8.0.22",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "axios": "^0.27.2",
+    "camera-controls": "^1.37.2",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-react": "^7.28.0",
     "next": "12.1.6",
+    "next-connect": "^0.12.2",
+    "npm": "^8.13.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "styled-components": "^5.3.5",
-    "styled-tools": "^1.7.2"
+    "styled-tools": "^1.7.2",
+    "three": "^0.141.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.1.6",
@@ -24,11 +31,14 @@
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
     "@types/styled-components": "^5.1.25",
+    "@types/three": "^0.141.0",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "^7.32.0",
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "next-transpile-modules": "^9.0.0",
     "typescript": "4.7.3"
   }
 }
